--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "makingwaves",
   "version": "0.0.1",
   "description": "",
-  "main": "app.js",
+  "main": "app.es6",
   "scripts": {
     "test": "echo\"Error: no test specified\"&& exit1"
   },
